--- a/src/css/common/basic.less
+++ b/src/css/common/basic.less
@@ -19,7 +19,14 @@
 .toast-icon {
     width: 100%;
     height: 100px;
-    font-size: 40px;
+    font-size: 50px;
+    text-align: center;
+    line-height: 100px;
+}
+.toast-icon i{
+    width: 100%;
+    height: 100px;
+    font-size: 50px;
     text-align: center;
     line-height: 100px;
 }
