--- a/src/css/player.less
+++ b/src/css/player.less
@@ -1,6 +1,7 @@
 body{
     display: flex;
     flex-direction: column;
+    position: relative;
 }
 
 .ctrl-box{
@@ -54,4 +55,71 @@ body{
     height: 90px;
     display: flex;
     justify-content: space-around;
+}
+
+.modal{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: rgba(128, 200, 228, .9);
+    padding: 20px;
+    color: #fff;
+    font-size: 16px;
+    display: none;
+    .box{
+        width: 100%;
+        height: 350px;
+       
+        margin-top: 60%;
+    }
+}
+
+.modal .box-top{
+    width: 100%;
+    height: 50%;
+    display: flex;
+    justify-content: space-around;
+    .play{
+        width: 100px;
+        height: 100px;
+        text-align: center;
+        line-height: 100px;
+        border-radius: 50%;
+        background: rgb(10, 169, 231);
+    }
+    .end{
+        width: 100px;
+        height: 100px;
+        text-align: center;
+        line-height: 100px;
+        border-radius: 50%;
+        background: pink;
+    }
+}
+.modal .box-bottom{
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid #fff;
+    .inbox{
+        width: 200px;
+        height: 100px;
+        
+        position: relative;
+        overflow: hidden;
+        img{
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 200px;
+            height: 100px;
+        }
+    }
+
+
+    span{
+        position: absolute;
+        right: 38px;
+        bottom: 42px;
+    }
 }
