feat:课程视频暂停功能

--- a/src/css/sports-detail.less
+++ b/src/css/sports-detail.less
@@ -1,6 +1,7 @@
 body{
     display: flex;
     justify-content: center;
+ 
 }
 
 .box{
@@ -24,6 +25,6 @@ body{
     font-size: 18px;
     text-align: center;
     bottom: 50px;
-    margin-left: 3.5%;
+    margin-left: calc(50%-175px);
     
 }
