--- a/src/css/login.less
+++ b/src/css/login.less
@@ -86,7 +86,7 @@ body{
 
 p>button{
     width: 75%;
-    height: 100%;
+    height:40px;
     background: rgba(99, 255, 167, 100);
     opacity: 0.5;
     margin-left: 10%;
