feat:项目最终版本

--- a/src/css/about.less
+++ b/src/css/about.less
@@ -29,7 +29,8 @@ body{
           
              img{
                  border-radius: 50%;
-                 width: 100%;
+                 width: 115px;
+            height: 115px;
                  position: absolute;
                  top: 0%;
                  left: 0%;
